# FFmpegX-Android

./: .gitattributes  .gitignore  ANDROID_10_SOLUTION.md  BUILD_COMPLETE.md  BUILD_FFMPEG_ANDROID.md  FINAL_STEPS.md  HOW_FFMPEG_KIT_WORKS.md  MIGRATION_TO_FULL_GPL.md  README.md  READY_TO_BUILD.md  align-ffmpeg-binaries.sh  build-ffmpeg-full-gpl.sh  build-ffmpeg-full.sh  build-ffmpeg.sh  build-full-ffmpeg.sh  build_ffmpeg_android.sh  build_ffmpeg_jni.sh  build_ffmpeg_shared.sh  build_ffmpeg_simple.sh  convert_to_android_lib.sh  create-library-release.sh  download-ffmpeg-libs.sh  download_ffmpeg.sh  download_proper_ffmpeg.sh  download_real_ffmpeg.sh  extract_ffmpeg_from_kit.sh  gradle.properties  jitpack.yml  settings.gradle.kts  setup-java17.sh  test-mp3-encoding.sh  test_ffmpeg.sh  test_ffmpeg_android10.md  test_jni_approach.sh
FFMpegLib/: build.gradle.kts  download_ffmpeg.gradle.kts
FFMpegLib/src/main/assets/ffmpeg/: .downloaded
FFMpegLib/src/main/assets/ffmpeg/arm64-v8a/: ffprobe
FFMpegLib/src/main/assets/ffmpeg/armeabi-v7a/: ffprobe
FFMpegLib/src/main/cpp/: CMakeLists.txt  ffmpeg-jni.cpp  ffmpeg-wrapper.cpp  ffmpeg_lib_jni.c  ffmpeg_wrapper.c
FFMpegLib/src/main/java/com/mzgs/ffmpeglib/: FFmpeg.kt  FFmpegAndroidExecutor.kt  FFmpegCommandBuilder.kt  FFmpegExecutor.kt  FFmpegHelper.kt  FFmpegInstaller.kt  FFmpegJNI.kt  FFmpegLibraryLoader.kt  FFmpegNative.kt  FFmpegNativeLoader.kt  FFmpegOperations.kt  FFmpegProgressHandler.kt  FFmpegProgressParser.kt  FFmpegSessionManager.kt  FFmpegShellExecutor.kt  FFmpegTester.kt  FFmpegUtils.kt  FFmpegWrapper.kt
FFMpegLib/src/test/java/com/mzgs/ffmpeglib/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/com/mzgs/ffmpeglib/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mzgs/ffmpeglib/: MainActivity.kt  SampleUsageActivity.kt  VideoDownloader.kt
app/src/main/java/com/mzgs/ffmpeglib/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
ffmpegx/: build.gradle.kts
ffmpegx/src/androidTest/java/com/mzgs/ffmpeglib/: ExampleInstrumentedTest.kt
ffmpegx/src/androidTest/java/com/mzgs/ffmpegx/: ExampleInstrumentedTest.kt
ffmpegx/src/main/assets/ffmpeg/: .downloaded
ffmpegx/src/main/assets/ffmpeg/x86/: ffprobe
ffmpegx/src/main/assets/ffmpeg/x86_64/: ffprobe
ffmpegx/src/main/cpp/: CMakeLists.txt  ffmpeg-jni.cpp  ffmpeg-wrapper.cpp  ffmpeg_cmd.c  ffmpeg_jni_wrapper.c  ffmpeg_lib_jni.c  ffmpeg_main.c  ffmpeg_native_executor_jni.cpp  ffmpeg_native_jni.cpp  ffmpeg_native_loader_jni.cpp  ffmpeg_transcoder.c  ffmpeg_wrapper.c
ffmpegx/src/main/cpp/ffmpeg-libs/: FFmpegConfig.cmake
ffmpegx/src/main/cpp/ffmpeg-libs/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpegx/src/main/cpp/ffmpeg-libs/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpegx/src/main/cpp/lame-libs/arm64-v8a/lib/: libmp3lame.la
ffmpegx/src/main/cpp/lame-libs/armeabi-v7a/lib/: libmp3lame.la
ffmpegx/src/main/java/com/mzgs/ffmpeglib/: FFmpegException.kt  FFmpegNativeExecutor.kt
ffmpegx/src/main/java/com/mzgs/ffmpegx/: FFmpeg.kt  FFmpegAndroidExecutor.kt  FFmpegAudioExtractor.kt  FFmpegCommandBuilder.kt  FFmpegException.kt  FFmpegExecutor.kt  FFmpegHelper.kt  FFmpegInstaller.kt  FFmpegJNI.kt  FFmpegLibraryLoader.kt  FFmpegNative.kt  FFmpegNativeExecutor.kt  FFmpegNativeLoader.kt  FFmpegOperations.kt  FFmpegProgressHandler.kt  FFmpegProgressParser.kt  FFmpegSessionManager.kt  FFmpegShellExecutor.kt  FFmpegTester.kt  FFmpegUtils.kt  FFmpegWrapper.kt
ffmpegx/src/test/java/com/mzgs/ffmpegx/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
